welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:22: error: integer number too large
1223344455566667777888899999 
^golomb:2: error: identifier expected but 'new' found.
  var T: new Array[Int](n)
         ^